--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src", "src/setupProxy.ts"],
   "path": {
     "pages/*": ["pages/*"],
     "components/*": ["components/*"]
