--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,17 @@
     "@types/node": "^16.18.87",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^11.0.10",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
