--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.7",
