--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.87",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "axios": "^1.6.8",
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^11.0.10",
     "http-proxy-middleware": "^2.0.6",
