--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.21",
     "axios": "^1.6.8",
     "browser-image-compression": "^2.0.2",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.10",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
